--- a/Models/Speech_Neural_Codec/2024.06.18_Articulatory_Encodec.md
+++ b/Models/Speech_Neural_Codec/2024.06.18_Articulatory_Encodec.md
@@ -4,18 +4,18 @@
 <summary>基本信息</summary>
 
 - 标题: "Articulatory Encodec: Vocal Tract Kinematics as a Codec for Speech"
-- 作者: 
+- 作者:
   - 01 Cheol Jun Cho - UC Berkeley - cheoljun@berkeley.edu;
   - 02 Peter Wu - UC Berkeley - peterw1@berkeley.edu;
   - 03 Tejas S. Prabhune - UC Berkeley - prabhune@berkeley.edu;
   - 04 Dhruv Agarwal - UC Berkeley - dhru-vagarwal@berkeley.edu;
   - 05 Gopala K. Anumanchipalli - UC Berkeley - gopala@berkeley.edu;
-- 链接: 
+- 链接:
   - [ArXiv](https://arxiv.org/abs/2406.12998) v2
-  - [Publication]()
-  - [Github]()
+  - [Publication]
+  - [Github]
   - [Demo](https://articulatoryencodec.github.io)
-- 文件: 
+- 文件:
   - [ArXiv](_PDF/2406.12998v1__Articulatory_Encodec.pdf)
   - [Publication] #TODO
 
@@ -39,19 +39,19 @@ Humans naturally produce intelligible speech by controlling articulators on the 
 Such vocal tract articulation has long been claimed to be the physiological ground of speech production in various aspects.
 The source-filter theory of speech describes articulation as shaping the vocal cavity to implement filters that are applied to glottal flow to shape speech sounds \cite{chiba1958vowel, fant1971acoustic}.
 Articulatory phonetics and phonology have explained the basis of speech in terms of the coordination of articulators, identifying some canonical articulators that can determine the phonetic properties \cite{maeda1990compensatory, browman1992articulatory, international1999handbook}.
-From deep down in the brain, the speech sensorimotor cortex has been proven to represent continuous, real-time vocal tract articulation while naturally speaking, suggesting the vocal tract articulation as a cognitive basis of speech production \cite{chartier2018encoding, anumanchipalli2019speech, cho2023neural}. 
+From deep down in the brain, the speech sensorimotor cortex has been proven to represent continuous, real-time vocal tract articulation while naturally speaking, suggesting the vocal tract articulation as a cognitive basis of speech production \cite{chartier2018encoding, anumanchipalli2019speech, cho2023neural}.
 
 Furthermore, the recent findings by Cho et al. \cite{cho2023evidence,cho2023self} suggest that articulatory inversion naturally emerges from self-supervised learning (SSL) of speech.
 When probed on articulatory kinematics measured by electromagnetic articulography (EMA), the features representation of the recent speech SSL models (e.g., HuBERT \cite{hsu2021hubert}) is highly correlated with EMA, where high-fidelity articulation can be reconstructed by a simple linear mapping from speech SSL features \cite{cho2023evidence}.
 This suggests that the articulatory inference is a natural solution of SSL of speech for abstracting the speech information.
 This emergent property is further shown to be universal to any speakers, dialects, and even languages \cite{cho2023self}.
-Together, these suggest that the biophysical, articulatory representation of speech is a shared coding principle in both biological and artificial intelligence of speech. 
+Together, these suggest that the biophysical, articulatory representation of speech is a shared coding principle in both biological and artificial intelligence of speech.
 
 However, despite the ubiquity of articulatory coding in speech science, an effective and scalable articulatory coding system for speech has not yet been demonstrated, which requires a generalizable articulatory synthesis model that synthesizes speech back from the articulatory inputs, along with a robust encoding model for articulatory features.
 Previous studies have demonstrated that intelligible speech can be synthesized from articulatory features \cite{birkholz2013prev_artsynth, krug2021vocaltractlab, wu2022artsynth, kim2023style, gao2024copysynthesis}.
 Combined with acoustics-to-articulatory inversion (AAI), resynthesis frameworks have shown the potential of articulatory features as viable intermediate for speech coding systems \cite{wu2023speakerind, gao2024copysynthesis}.
 However, the previous methods are limited to a fixed set of speakers and the qualities are still far behind the commercial speech synthesis models.
-This absence of a universal, generalizable framework has significantly limited the utility of articulatory-based speech coding as a practically usable system. 
+This absence of a universal, generalizable framework has significantly limited the utility of articulatory-based speech coding as a practically usable system.
 
 Here, we first demonstrate a high-performance, universal articulatory encoder and decoder that can scale and generalize across an indefinite number of speakers.
 We leverage the universal articulatory inference by speech SSL \cite{cho2023self} to build a generalizable articulatory encoder that transforms speech into a template articulatory space.
@@ -65,7 +65,7 @@ The ***articulatory encodec*** shows a minimal loss of intelligibility and quali
 Compared to existing neural coding of speech (choi2021nansy; choi2022nansy++; [SoundStream [20]](2021.07.07_SoundStream.md); [EnCodec [21]](2022.10.24_EnCodec.md); [FACodec [22]](2024.03.05_FACodec.md)), representing speech as articulatory features has following benefits:
 
 - **Low-dimensionality**: The articulatory features have only 14 channels with 50 Hz sampling rate.
-This is significantly lower than the previous acoustic features or neural embedding of speech. 
+This is significantly lower than the previous acoustic features or neural embedding of speech.
 - **Interpretability**: Each channel corresponds to the actual physical articulator on the vocal tract, which can be intuitively interpretable by visualization on the vocal tract.
 - **Controllability**: The articulatory features can be naturally controlled by the same principle as speech production.
 - **Universality**: The articulatory encoding is universal across speakers despite and disentangled from individual anatomical variance.
@@ -91,7 +91,7 @@ However, the individual variance in vocal tract anatomy across speakers induces 
 Despite such variability, a canonical basis of articulation is suggested to exist, which is agnostic to individual vocal tract anatomy \cite{cho2023self}.
 In fact, Cho et al. \cite{cho2023self} demonstrated that a linear affine transformation can geometrically align one speaker's articulatory system to another's.
 This suggests that individual articulatory spaces are lying on the same linear space so that an articulatory space of any speaker can be a hypothetical universal template space of articulation.
-We empirically prove this statement by leveraging a single-speaker AAI model as a universal articulatory encoder for our codec framework. %Therefore, one good AAI model fit to a single speaker's EMA sensor arrangement can be used as a universal AAI model. %Furthermore, an AAI model is implemented by a frozen speech SSL model with a linear head inserted in the later layer of Transformer encoder where speaker information is marginalized out.  
+We empirically prove this statement by leveraging a single-speaker AAI model as a universal articulatory encoder for our codec framework. %Therefore, one good AAI model fit to a single speaker's EMA sensor arrangement can be used as a universal AAI model. %Furthermore, an AAI model is implemented by a frozen speech SSL model with a linear head inserted in the later layer of Transformer encoder where speaker information is marginalized out.
 
 ### C.Articulatory Synthesis
 
@@ -100,7 +100,7 @@ A century of efforts have been made to build articulatory synthesizers for basic
 Several methods have been proposed for improving intelligibility and quality, demonstrating broader use cases including text-to-speech (TTS) \cite{krug2021vocaltractlab}, prosody manipulation \cite{aryal2014accent, birkholz2017manipulation}, and speech brain-computer interfaces (BCIs) \cite{anumanchipalli2019speech}.
 Some of these works utilized deep learning models to map articulatory features to acoustic features, which are then converted to audio using pretrained acoustic synthesizers \cite{aryal2016data, anumanchipalli2019speech, kim2023style}.
 A recent study shows that a GAN-based generative model can directly synthesize speech waveform from articulatory features with high intelligibility \cite{wu2022artsynth}.
-However, to our knowledge, none of the existing approaches has achieved industrial-level performance, which requires high intelligibility, quality, and generalizability across unseen speakers. 
+However, to our knowledge, none of the existing approaches has achieved industrial-level performance, which requires high intelligibility, quality, and generalizability across unseen speakers.
 
 ### D.Neural Codec of Speech
 
@@ -109,7 +109,7 @@ Various autoencoder methods have been suggested to jointly train encoders that c
 Also, pretrained speech SSL models have been utilized to extract rich linguistic content of speech, and synthesizers are trained to restore speech audio from those features \cite{choi2021nansy, polyak2021resynthesis, choi2022nansy++,  [HierSpeech [45]](../E2E/2022.11.01_HierSpeech.md); [HierSpeech++ [46]](2023.11.21_HierSpeechpp.md), [QuickVC [47]](../Voice_Conversion/2023.02.23_QuickVC.md)}.
 These SSL-based methods often utilize separate source modeling (e.g., pitch) and speaker encoding, since SSL model encoders tend to marginalize out acoustic and speaker information \cite{chen2022spkinfo, pasad2023comparative}.
 We categorize all these kinds of closed-loop frameworks utilizing neural networks for both encoding and decoding as \emph{neural codecs}.
-Though the existing methods achieve high fidelity in representing speech audio, they significantly lack interpretability and controllability. 
+Though the existing methods achieve high fidelity in representing speech audio, they significantly lack interpretability and controllability.
 
 ## 3.Methodology: 方法
 
@@ -117,7 +117,7 @@ To bridge this interpretability and controllability gap, we propose neural artic
 
 ### A.Articulatory Analysis
 
-The articulatory encoding is extracted by articulatory analysis of 3 different aspects of speech: vocal-tract articulation, source features, and speaker identity (Fig. \ref{fig:pipeline}). 
+The articulatory encoding is extracted by articulatory analysis of 3 different aspects of speech: vocal-tract articulation, source features, and speaker identity (Fig. \ref{fig:pipeline}).
 
 #### Vocal-tract articulation
 
@@ -126,26 +126,26 @@ We selected one of the largest single-speaker EMA datasets, MNGU0 \cite{mngu}, t
 This dataset is widely accepted and verified in many studies, given a fine signal quality carefully controlled by the authors.
 We claim all speakers' articulations can be represented on this single-speaker EMA space without losing information that contributes to the intelligibility of speech.
 That is, EMA represents phonetic content in a way that can be detached from the variance of vocal tract anatomical structure across individuals.
-Our results show empirical evidence of this claim. %we empirically demonstrate this single-speaker AAI can be used to build speaker-agnostic ***articulatory encodec***. 
+Our results show empirical evidence of this claim. %we empirically demonstrate this single-speaker AAI can be used to build speaker-agnostic ***articulatory encodec***.
 
 We use the SSL-linear AAI approach proposed by \cite{cho2023evidence, cho2023self}.
 The SSL-linear model is built by training a linear mapping from SSL features to EMA, while keeping the SSL encoder weights frozen.
 This simple mapping can effectively find a linear subspace in the SSL feature space which is highly correlated with EMA, proven by previous probing studies \cite{cho2023evidence,cho2023self}.
 We use the [WavLM [51]](../Speech_Representaion/2021.10.26_WavLM.md) Large model, which shows the highest correlation amongst speech SSL models as reported in \cite{cho2023evidence}.
 Note that the linear head is the only fitted part here, thus, maintaining the generalization capacity of the WavLM encoder that is attained by pretraining on large-scale speech data and adversarial data augmentation ([WavLM [51]](../Speech_Representaion/2021.10.26_WavLM.md)).
-Furthermore, the speaker information tends to diminish after a few early layers \cite{chen2022spkinfo}, which indicates the mapping can be speaker-agnostic, further contributing to multi-speaker generalizability. 
+Furthermore, the speaker information tends to diminish after a few early layers \cite{chen2022spkinfo}, which indicates the mapping can be speaker-agnostic, further contributing to multi-speaker generalizability.
 
 The original 200 Hz EMA data is downsampled to 50 Hz to match the sampling rate of the SSL features, and z-scored within utterances.
 A low-pass filter is applied to the features to remove high-frequency noise, where the frequency threshold is set as 10 Hz.
 We used the 9th layer of the WavLM Transformer encoder from which the features are extracted for inversion (see Appendix A.1 for the selection procedure).
-The resulting AAI model outputs 12 channels of EMA (X and Y axis of each of 6 articulators) with 50 Hz frequency. 
+The resulting AAI model outputs 12 channels of EMA (X and Y axis of each of 6 articulators) with 50 Hz frequency.
 
 #### Source Features
 
 Though EMA has a full descriptive capacity of the place of articulation, it lacks source information generated by the glottal excitation, which is crucial to implementing the manner of articulation and expressing the prosody of speech.
 Therefore, we include pitch (or fundamental frequency (f0)) and loudness features to represent the source features \cite{choi2021nansy, choi2022nansy++, yang2024streamvc}.
 The loudness feature also informs non-larynx constriction, which is important for voiced fricatives such as `z` and `v`.
-We use CREPE \cite{kim2018crepe} to infer pitch from speech, and loudness is measured by the average of absolute magnitudes of waves for every 20 ms. 
+We use CREPE \cite{kim2018crepe} to infer pitch from speech, and loudness is measured by the average of absolute magnitudes of waves for every 20 ms.
 Together with the EMA from AAI, we referred to these features as ``articulatory features" that have 14 channels (12 EMA + 2 source) and a 50 Hz sampling rate.
 
 #### Speaker Identity
@@ -166,7 +166,7 @@ This speaker identity encoding is indispensable to fully map out multi-speaker s
 We adopt [HiFi-GAN](../../Models/TTS3_Vocoder/2020.10.12_HiFi-GAN.md) as the vocoder for articulatory synthesis ([HiFi-GAN [56]](../../Models/TTS3_Vocoder/2020.10.12_HiFi-GAN.md); wu2022artsynth, polyak2021resynthesis).
 The vocoder is trained to synthesize speech audio with a 16K Hz sampling rate from articulatory features defined in \S\ref{methods:inversion} and \S\ref{methods:source}.
 To condition the generation on the speaker embedding, we apply FiLM \cite{perez2018film} to each convolution module with different receptive fields in the HiFi-GAN architecture, which modulates the output channels of each module.
-We adopt the same loss functions as [HiFi-GAN [56]](../../Models/TTS3_Vocoder/2020.10.12_HiFi-GAN.md): Mel-spectrogram loss for reconstruction and multi-period and multi-scale discriminator loss for GAN training. 
+We adopt the same loss functions as [HiFi-GAN [56]](../../Models/TTS3_Vocoder/2020.10.12_HiFi-GAN.md): Mel-spectrogram loss for reconstruction and multi-period and multi-scale discriminator loss for GAN training.
 
 ### C.Dataset
 
@@ -174,7 +174,7 @@ For training the vocoder, we use [LibriTTS-R [58]](../../Datasets/2023.05.30_Lib
 The dataset is comprised of 585 hours of reading audiobooks ((555, 15, 15) hours for (train, dev, test) sets).
 The original 24K Hz audio is downsampled to 16K Hz.
 We use [VCTK [60]](../../Datasets/2012.08.00_VCTK.md) to further evaluate the generalizability of the model to a broader range of speakers and accents.
-The entire VCTK dataset is not included in the training set and is only used for evaluation. 
+The entire VCTK dataset is not included in the training set and is only used for evaluation.
 
 Note that only the FFN in the speaker identity encoding and the vocoder are updated in the large-scale training (orange modules in Fig. \ref{fig:pipeline}), and the rest of the pipeline remains fixed while training.
 More details of implementation and training are in Appendix B.1-7.
@@ -191,7 +191,7 @@ Such physical embodiment of speech coding enables a natural, intuitive interpret
 With large-scale training, our proposed ***articulatory encodec*** achieves a high-performance articulatory resynthesis that can generalize to unseen speakers and novel dialects, with a minimal loss of information compared to ground truth speech.
 To our knowledge, this is the first demonstration of universal articulatory synthesis that can scale up to an indefinite number of speakers.
 This universality is aided by a novel speaker identity encoding, which embeds highly discriminable speaker-specific speaker.
-Furthermore, the encoded speaker embedding is effectively disentangled from articulatory features and can be used for accent-preserving voice conversion. 
+Furthermore, the encoded speaker embedding is effectively disentangled from articulatory features and can be used for accent-preserving voice conversion.
 
 In future work, we will scale the ***articulatory encodec*** to incorporate expressive speech and singing.
 Also, we will improve the robustness of the system under noisy environments.
